# franca_ara_integration

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  franca_ara.pro  run
src/: CMakeLists.txt  DebugTexts.qml  LaneIndicator.qml  SomeIpNetworkThread.cpp  SomeIpNetworkThread.h  SomeIpNetworkThreadTypes.h  VehicleBoundingBox.qml  VideoImage.qml  dltlogger.h  dltloggername.h  generate.sh  imageprovider.cpp  imageprovider.h  imagesource.cpp  imagesource.h  main.cpp  main.qml  qml.qrc  recognitionmodel.cpp  recognitionmodel.h  resources.qrc  src.pro
src/ivi/src-gen/v1/genivi/aasr/showcase/: IDrivingLaneInstanceIds.hpp  IDrivingLaneProxy.hpp  IDrivingLaneSomeIPDeployment.cpp  IDrivingLaneSomeIPDeployment.hpp  IDrivingLaneSomeIPProxy.cpp  IDrivingLaneSomeIPStubAdapter.cpp  IDrivingLaneSomeIPStubAdapter.hpp  IVehicles.hpp  IVehiclesInstanceIds.hpp  IVehiclesStub.hpp  (+5 more)
src/src-gen/: README.md
src/src-gen/v1/genivi/aasr/showcase/: IDrivingLane.hpp  IDrivingLaneProxyBase.hpp  IDrivingLaneSomeIPDeployment.hpp  IDrivingLaneSomeIPProxy.cpp  IDrivingLaneSomeIPProxy.hpp  IDrivingLaneSomeIPStubAdapter.cpp  IDrivingLaneSomeIPStubAdapter.hpp  IDrivingLaneStub.hpp  IDrivingLaneStubDefault.cpp  IDrivingLaneStubDefault.hpp  IVehicles.hpp  IVehiclesProxy.hpp  IVehiclesProxyBase.hpp  IVehiclesSomeIPDeployment.hpp  IVehiclesSomeIPProxy.cpp  IVehiclesSomeIPProxy.hpp  IVehiclesSomeIPStubAdapter.cpp  IVehiclesSomeIPStubAdapter.hpp  IVehiclesStub.hpp  IVehiclesStubDefault.cpp  IVehiclesStubDefault.hpp
tests/testprograms/test_server/: CMakeLists.txt  client.cpp  server.cpp
(+74 files in other folders)
